@@ -45,6 +45,7 @@ PEOPE WHO MADE LANGUAGE FILES
 
 - ABAP                   Andres Picazo
 - Actionscript           Steffen Krause (french translation by NikO)
+- ActionScript 3         Jordi Boggiano (version for ActionScript3 and MXML)
 - Ada                    Tux
 - Apache                 Tux
 - Applescript            Stephan Klimek
